# propdayscov-rs

./: Cargo.toml  README.md
src/: dose_parser.rs  file_selector.rs  main.rs  patient_parsing.rs  pdc.rs
test/files/: one_patient_one_drug.csv
