[package]
name = "propdayscov"
authors = ["Andrew Repp <rust@andrewrepp.com>"]
description = "Calculation proportion of days covered metric from input CSV file."
documentation = "https://github.com/ReppCodes/propdayscov-rs"
homepage = "https://github.com/ReppCodes/propdayscov-rs"
repository = "https://github.com/ReppCodes/propdayscov-rs"
readme = "README.md"
keywords = ["csv", "healthcare", "metric", "pdc", "serde"]
license = "Unlicense/MIT"
version = "0.1.0"
edition = "2021"
exclude = [
    "test/files/*"
]

[dependencies]
csv = "1.1"
serde = {version = "1.0.55", features = ["derive"]}
chrono = "0.4"
nfd2 = "0.3.0"
clap = { version = "3.0.0", features = ["derive"] }
rayon = "1.5.1"